--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,15 @@
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+.counter {
+  margin-top: 10px;
+}
+
+.counter > .display {
+  font-size: 60px;
+  margin-bottom: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 200;
 }
 
 @keyframes App-logo-spin {
